# reach-uga-technical-senior-GIS-test-2026

./: .gitignore  README.md  pyproject.toml
instructions/: REACH_UGA_Technical_Test_Senior_GIS_Data_2026 (1).docx  Written Test Assistant IMO - Kampala (1).docx
others/: Copy of data.xlsx
scripts/: config.py  solutions.ipynb
